--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required ( VERSION 3.1 )
 
-project ( craft LANGUAGES CXX )
-
 set ( CMAKE_BUILD_TYPE Release )
 
-FILE ( GLOB craft_header src/*.hpp )
 FILE ( GLOB craft_source src/*.cpp )
-add_executable ( craft ${craft_header} ${craft_source} )
+add_executable ( craft ${craft_source} )
 
 set_target_properties ( craft PROPERTIES
     CXX_STANDARD 14
@@ -32,8 +29,8 @@ set ( GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE )
 set ( GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE )
 set ( GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE )
 add_subdirectory ( third_party/glfw )
-target_include_directories ( craft PRIVATE third_party/glfw/include )
 target_link_libraries ( craft glfw )
+target_include_directories ( craft PRIVATE third_party/glfw/include )
 
 target_include_directories ( craft PRIVATE third_party/glm )
 
