--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required ( VERSION 3.1 )
 
 set ( CMAKE_BUILD_TYPE Release )
 
-project ( craft )
+project ( craft CXX )
 file ( GLOB craft_source src/*.cpp )
 add_executable ( craft ${craft_source} )
 
@@ -18,13 +18,12 @@ elseif ( ${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
     target_compile_options ( craft PRIVATE /W4 )
 endif ()
 
-find_package ( OpenGL REQUIRED )
-target_include_directories ( craft PRIVATE ${OPENGL_INCLUDE_DIR} )
-target_link_libraries ( craft ${OPENGL_gl_LIBRARY} )
-
-find_package ( GLEW REQUIRED )
-target_include_directories ( craft PRIVATE ${GLEW_INCLUDE_DIRS} )
-target_link_libraries ( craft ${GLEW_LIBRARIES} )
+set ( GLAD_API "gl=4.2" CACHE STRING "" FORCE )
+set ( GLAD_REPRODUCIBLE ON CACHE BOOL "" FORCE )
+add_subdirectory ( third_party/glad )
+target_link_libraries ( craft glad )
+target_include_directories ( craft PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/third_party/glad/include )
+add_dependencies ( craft glad )
 
 set ( GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE )
 set ( GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE )
@@ -32,6 +31,7 @@ set ( GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE )
 add_subdirectory ( third_party/glfw )
 target_link_libraries ( craft glfw )
 target_include_directories ( craft PRIVATE third_party/glfw/include )
+add_dependencies ( craft glfw )
 
 target_include_directories ( craft PRIVATE third_party/glm )
 
