--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,15 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# CMake
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
+*
+!shader/*.glsl
+!src/*.cpp
+!src/*.hpp
+!.gitignore
+!.gitmodules
+!CMakeLists.txt
+!LICENSE.md
+!README.md
+!gen_map.py
+!texture/
+!third_party/glad
+!third_party/glfw
+!third_party/glm
+!third_party/stb
